objects/Microsoft_Azure_Client_Credentials__mdt.object
<CustomObject>
    <description>Used to create Auth Provider for Named Credentials</description>
    <fields>
        <fullName>Callback_URL__c</fullName>
        <label>Callback URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <defaultValue>&quot;https://graph.microsoft.com/.default&quot;</defaultValue>
        <label>Resource</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_ID__c</fullName>
        <label>Tenant ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Microsoft Azure Client Credential</label>
    <pluralLabel>Microsoft Azure Client Credentials</pluralLabel>
</CustomObject>